@@ -1,4 +1,4 @@
 {
 	"WELCOME_&NAME_&VERSION": "Hello, {0}. Welcome to Kaguya! {1}",
-	"VERSION": "Version 1.23 [BETA]"
+	"VERSION": "Version 1.23"
 }
