@@ -19,6 +19,7 @@ Version 1.23
 - $autoassignclear [aac] command added.
 - $autoassignview [aav] command added.
 - Improved music service exception message. It's now less generic/vague.
+- Fixed a bug with the music player where Kaguya could not play copyrighted songs.
 - $serverblacklist [sbl] owner only command added.
 - $serverunblacklist [subl] owner only command added.
 - $massblacklist renamed to $userblacklist
@@ -28,6 +29,9 @@ Version 1.23
     - I will focus on improving these for now. It is simply way too time consuming to manually create tags for thousands of images.
     - They have been removed from the command list.
 - Created a timer where every hour Kaguya will remove servers from the database that the bot is not connected to.
+- Fixed a bug where timers (such as updating the game, backing up files, etc) would overlap each other if a shard disconnected, then reconnected.
+    - Now, there will only be one timer (per shard).
+- New "game" added to the rotation: Kaguya's current version!
 
 
 Version 1.22.1
